--- a/package.json
+++ b/package.json
@@ -5,17 +5,30 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^4.1.0",
+    "@material-ui/icons": "^4.1.0",
+    "bootstrap": "^4.3.1",
+    "font-awesome": "^4.7.0",
     "gatsby": "^2.3.30",
     "gatsby-image": "^2.0.40",
     "gatsby-plugin-manifest": "^2.0.29",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-source-filesystem": "^2.0.32",
     "gatsby-source-strapi": "0.0.8",
     "gatsby-transformer-sharp": "^2.1.18",
+    "material-ui-icons": "^1.0.0-beta.36",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
+    "react-coverflow": "^0.2.20",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-markdown": "^4.0.8"
